remove unnecessary global selectors (#427)
* remove unnecessary global selectors

* typo

--- a/design-toolkit/components/src/index.css
+++ b/design-toolkit/components/src/index.css
@@ -182,16 +182,16 @@ body {
   /*
  * Scrollbars
  */
-  *::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: var(--spacing-l);
     height: var(--spacing-l);
   }
 
-  *::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track {
     background: var(--color-interactive);
   }
 
-  *::-webkit-scrollbar-thumb{
+  ::-webkit-scrollbar-thumb{
     background-color: var(--color-interactive-hover-light);
     border-radius: var(--radius-large);
     border: 5px solid transparent;
