--- a/design-toolkit/components/src/tokens/tokens.css
+++ b/design-toolkit/components/src/tokens/tokens.css
@@ -11,69 +11,123 @@
  */
 
 :root {
-  --colors-neutral-10: #0b0b0b;
-  --colors-neutral-11: #FF0000;
-  --colors-neutral-01: #ffffff;
-  --colors-neutral-02: #e6e6e6;
-  --colors-neutral-03: #898989;
-  --colors-neutral-04: #686868;
-  --colors-neutral-05: #565656;
-  --colors-neutral-06: #424242;
-  --colors-neutral-07: #383838;
-  --colors-neutral-08: #2f2f31;
-  --colors-neutral-09: #222222;
-  --colors-alpha-black-01: rgba(0, 0, 0, 0.08);
-  --colors-alpha-black-02: rgba(0, 0, 0, 0.4);
-  --colors-alpha-black-03: rgba(0, 0, 0, 0.8);
-  --colors-alpha-white-01: rgba(255, 255, 255, 0.08);
-  --colors-alpha-white-02: rgba(255, 255, 255, 0.4);
-  --colors-alpha-white-03: rgba(255, 255, 255, 0.8);
-  --colors-highlight-primary-01: #c9fdef;
-  --colors-highlight-primary-02: #7df9d8;
-  --colors-highlight-primary-03: #28f5be;
-  --colors-highlight-primary-04: #189372;
-  --colors-highlight-primary-05: #0a3d30;
-  --colors-highlight-secondary-01: #c9f6fd;
-  --colors-highlight-secondary-02: #7ee9f9;
-  --colors-highlight-secondary-03: #28dcf5;
-  --colors-highlight-secondary-04: #188493;
-  --colors-highlight-secondary-05: #0a373d;
-  --colors-highlight-tertiary-01: #f9c5e2;
-  --colors-highlight-tertiary-02: #f174b9;
-  --colors-highlight-tertiary-03: #e8178a;
-  --colors-highlight-tertiary-04: #8a0e53;
-  --colors-highlight-tertiary-05: #3a0623;
-  --colors-utility-info-01: #e6e6e6;
-  --colors-utility-info-02: #898989;
-  --colors-utility-info-03: #686868;
-  --colors-utility-info-04: #424244;
-  --colors-utility-info-05: #222222;
-  --colors-utility-advisory-01: #e0edff;
-  --colors-utility-advisory-02: #a1caff;
-  --colors-utility-advisory-03: #62a6ff;
-  --colors-utility-advisory-04: #3a6499;
-  --colors-utility-advisory-05: #142133;
-  --colors-utility-normal-01: #d6f6e5;
-  --colors-utility-normal-02: #82e4b2;
-  --colors-utility-normal-03: #30d27e;
-  --colors-utility-normal-04: #1c7e4c;
-  --colors-utility-normal-05: #0a2a19;
-  --colors-utility-serious-01: #feedcc;
-  --colors-utility-serious-02: #fdc865;
-  --colors-utility-serious-03: #fca400;
-  --colors-utility-serious-04: #976201;
-  --colors-utility-serious-05: #322100;
-  --colors-utility-critical-01: #f6d3d2;
-  --colors-utility-critical-02: #e57b77;
-  --colors-utility-critical-03: #d4231d;
-  --colors-utility-critical-04: #7f1511;
-  --colors-utility-critical-05: #2a0706;
-  --colors-classification-unclass: #007A33;
-  --colors-classification-cui: #502b85;
-  --colors-classification-confidential: #0033a0;
-  --colors-classification-secret: #c8102e;
-  --colors-classification-top-secret: #ff8c00;
-  --colors-classification-ts-sci: #fce83a;
+  --primitive-neutral-50: #ffffff;
+  --primitive-neutral-100: #eff1f2;
+  --primitive-neutral-200: #d5d7d9;
+  --primitive-neutral-300: #c3c5c7;
+  --primitive-neutral-400: #888a8f;
+  --primitive-neutral-500: #565759;
+  --primitive-neutral-600: #414245;
+  --primitive-neutral-700: #2f2f31;
+  --primitive-neutral-800: #212223;
+  --primitive-neutral-900: #151517;
+  --primitive-neutral-950: #000000;
+  --primitive-alpha-black-100: rgba(0, 0, 0, 0.08);
+  --primitive-alpha-black-200: rgba(0, 0, 0, 0.16);
+  --primitive-alpha-black-300: rgba(0, 0, 0, 0.24);
+  --primitive-alpha-black-400: rgba(0, 0, 0, 0.40);
+  --primitive-alpha-black-500: rgba(0, 0, 0, 0.80);
+  --primitive-alpha-white-100: rgba(255, 255, 255, 0.08);
+  --primitive-alpha-white-200: rgba(255, 255, 255, 0.16);
+  --primitive-alpha-white-300: rgba(255, 255, 255, 0.24);
+  --primitive-alpha-white-400: rgba(255, 255, 255, 0.40);
+  --primitive-alpha-white-500: rgba(255, 255, 255, 0.80);
+  --primitive-accent-primary-50: #d5f2fe;
+  --primitive-accent-primary-100: #b1e9ff;
+  --primitive-accent-primary-200: #6ed1ff;
+  --primitive-accent-primary-300: #39b7fa;
+  --primitive-accent-primary-400: #009cde;
+  --primitive-accent-primary-500: #008fd0;
+  --primitive-accent-primary-600: #0068a1;
+  --primitive-accent-primary-700: #004f7e;
+  --primitive-accent-primary-800: #00213e;
+  --primitive-accent-primary-900: #000e22;
+  --primitive-accent-secondary-50: #c9f6fd;
+  --primitive-accent-secondary-100: #97f1ff;
+  --primitive-accent-secondary-200: #54e5f9;
+  --primitive-accent-secondary-300: #22d5ed;
+  --primitive-accent-secondary-400: #22b4c9;
+  --primitive-accent-secondary-500: #188493;
+  --primitive-accent-secondary-600: #146974;
+  --primitive-accent-secondary-700: #0e474e;
+  --primitive-accent-secondary-800: #083035;
+  --primitive-accent-secondary-900: #051e21;
+  --primitive-accent-tertiary-50: #f9c5e2;
+  --primitive-accent-tertiary-100: #f49acc;
+  --primitive-accent-tertiary-200: #f06ab3;
+  --primitive-accent-tertiary-300: #e8178a;
+  --primitive-accent-tertiary-400: #b90d6c;
+  --primitive-accent-tertiary-500: #8a0e53;
+  --primitive-accent-tertiary-600: #6f0b43;
+  --primitive-accent-tertiary-700: #4c082e;
+  --primitive-accent-tertiary-800: #3a0623;
+  --primitive-accent-tertiary-900: #270417;
+  --primitive-utility-info-50: #ffffff;
+  --primitive-utility-info-100: #eff1f2;
+  --primitive-utility-info-200: #d5d7d9;
+  --primitive-utility-info-300: #c3c5c7;
+  --primitive-utility-info-400: #888a8f;
+  --primitive-utility-info-500: #565759;
+  --primitive-utility-info-600: #414245;
+  --primitive-utility-info-700: #2f2f31;
+  --primitive-utility-info-800: #212223;
+  --primitive-utility-info-900: #151517;
+  --primitive-utility-advisory-50: #ebf4ff;
+  --primitive-utility-advisory-100: #c4deff;
+  --primitive-utility-advisory-200: #a9ceff;
+  --primitive-utility-advisory-300: #8bbdff;
+  --primitive-utility-advisory-400: #62a6ff;
+  --primitive-utility-advisory-500: #4e88da;
+  --primitive-utility-advisory-600: #3c67a0;
+  --primitive-utility-advisory-700: #264062;
+  --primitive-utility-advisory-800: #1a2c43;
+  --primitive-utility-advisory-900: #0e1825;
+  --primitive-utility-normal-50: #eefbef;
+  --primitive-utility-normal-100: #c2f5c5;
+  --primitive-utility-normal-200: #86e98c;
+  --primitive-utility-normal-300: #47d750;
+  --primitive-utility-normal-400: #2bbf35;
+  --primitive-utility-normal-500: #26a12e;
+  --primitive-utility-normal-600: #1c7e23;
+  --primitive-utility-normal-700: #145718;
+  --primitive-utility-normal-800: #0e3b11;
+  --primitive-utility-normal-900: #08210a;
+  --primitive-utility-serious-50: #fff8eb;
+  --primitive-utility-serious-100: #ffeac2;
+  --primitive-utility-serious-200: #ffd382;
+  --primitive-utility-serious-300: #ffc14c;
+  --primitive-utility-serious-400: #fbab16;
+  --primitive-utility-serious-500: #e89906;
+  --primitive-utility-serious-600: #bb7a00;
+  --primitive-utility-serious-700: #8e5d00;
+  --primitive-utility-serious-800: #634101;
+  --primitive-utility-serious-900: #291b00;
+  --primitive-utility-critical-50: #ffebea;
+  --primitive-utility-critical-100: #ffc4c2;
+  --primitive-utility-critical-200: #ff9390;
+  --primitive-utility-critical-300: #ff6d68;
+  --primitive-utility-critical-400: #ff2e27;
+  --primitive-utility-critical-500: #d40b04;
+  --primitive-utility-critical-600: #a10701;
+  --primitive-utility-critical-700: #790501;
+  --primitive-utility-critical-800: #540300;
+  --primitive-utility-critical-900: #290200;
+  --primitive-roe-id-pending: #404040;
+  --primitive-roe-id-friend: #1484f4;
+  --primitive-roe-id-assumed-friend: #0e8f37;
+  --primitive-roe-id-neutral: #5b137a;
+  --primitive-roe-id-unknown: #edda0a;
+  --primitive-roe-id-suspect: #ffad38;
+  --primitive-roe-id-hostile: #ff0033;
+  --primitive-roe-id-no-statement: #404040;
+  --primitive-classification-missing: #0b0b0b;
+  --primitive-classification-unclass: #007A33;
+  --primitive-classification-cui: #502b85;
+  --primitive-classification-confidential: #0033a0;
+  --primitive-classification-secret: #c8102e;
+  --primitive-classification-top-secret: #ff8c00;
+  --primitive-classification-ts-sci: #fce83a;
+  --primitive-on-accent: #FFFFFF;
   --typography-header-xxl-size: 32px;
   --typography-header-xxl-height: 40px;
   --typography-header-xxl-spacing: 0px;
@@ -135,8 +189,10 @@
   --radius-large: 8px;
   --radius-round: 80px;
   --shadow-elevation-default: initial;
-  --shadow-elevation-overlay: 0 8px 10px 0 rgba(0 0 0 / 0.2), 0 6px 30px 0 rgba(0 0 0 / 0.12), 0 16px 24px 0 rgba(0 0 0 / 0.14);
-  --shadow-elevation-raised: 0 5px 5px 0 rgba(0 0 0 / 0.2), 0 3px 14px 0 rgba(0 0 0 / 0.12), 0 8px 10px 0 rgba(0 0 0 / 0.14);
+  --shadow-elevation-overlay-bold: 0 8px 24px 0 rgba(0 0 0 / 0.80);
+  --shadow-elevation-overlay-muted: 0 8px 24px 0 rgba(0 0 0 / 0.16);
+  --shadow-elevation-raised-bold: 0 1px 4px 0 rgba(0 0 0 / 0.80);
+  --shadow-elevation-raised-muted: 0 1px 4px 0 rgba(0 0 0 / 0.16);
   --font-primary: "Roboto Flex", sans-serif;
   --font-display: "Roboto Mono", monospace;
   --icon-size-l: var(--spacing-xl);
